[package]
name = "floattest"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmtime = "0.31.0"
anyhow = "1.0.51"
wasmer = "2.0"
wasmer-engine-universal = "2.1.0"
wasmer-compiler-cranelift = "2.1.0"